--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "homepage": "https://github.com/mgyarmathy/craps",
   "dependencies": {
     "express": "~3.4.8",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "mocha": "~1.18.2",
+    "socket.io-client": "~0.9.16",
+    "should": "~3.3.0"
   }
 }
